fix: fix bug request merchant

--- a/src/app/components/auth/login/login.component.scss
+++ b/src/app/components/auth/login/login.component.scss
@@ -4,7 +4,7 @@
         background-color: #fff;
         // width: 35%;
     }
-    background: url(https://i.ibb.co/5T53L86/image-2023-12-13-205341304.png);
+    // background: url(https://i.ibb.co/5T53L86/image-2023-12-13-205341304.png);
     background-repeat: no-repeat;
     background-size: cover;
 }
