--- a/src/app/components/auth/register/register.component.less
+++ b/src/app/components/auth/register/register.component.less
@@ -9,7 +9,7 @@
     &_form {
         background-color: #fff;
     }
-    background: url(https://i.ibb.co/5T53L86/image-2023-12-13-205341304.png);
+    // background: url(https://i.ibb.co/5T53L86/image-2023-12-13-205341304.png);
     background-repeat: no-repeat;
     background-size: cover;
 }
