--- a/src/app/components/user-pages/cart/cart.component.html
+++ b/src/app/components/user-pages/cart/cart.component.html
@@ -40,11 +40,11 @@
                     </div>
                     <p-divider></p-divider>
                 </div>
-                <div class="voucher d-flex gap-4 align-items-center">
+                <!-- <div class="voucher d-flex gap-4 align-items-center">
                     <h6>Select Voucher:</h6>
                     <p-dropdown [options]="listVoucher" optionLabel="name"></p-dropdown>
                 </div>
-                <p-divider></p-divider>
+                <p-divider></p-divider> -->
 
             </div>
         </div>
